--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rn-rpg",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "resolutions": {
+    "metro": "0.70.1"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +12,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@legendapp/motion": "^2.2.0",
     "expo": "~47.0.9",
+    "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
