--- a/package.json
+++ b/package.json
@@ -13,15 +13,27 @@
   },
   "dependencies": {
     "@legendapp/motion": "^2.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
     "expo": "~47.0.9",
     "expo-screen-orientation": "~5.0.1",
+    "expo-speech": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-svg": "13.4.0"
+    "react-native-animated-sprite": "^0.11.1",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "13.4.0",
+    "rn-sprite-sheet": "^1.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "lodash.sample": "^4.2.1",
     "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
