--- a/package.json
+++ b/package.json
@@ -9,27 +9,37 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@benjeau/react-native-draw": "^0.8.3",
+    "@benjeau/react-native-draw-extras": "^0.2.2",
     "@legendapp/motion": "^2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.2.4",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
+    "@shopify/react-native-skia": "0.1.157",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.9",
     "expo-screen-orientation": "~5.0.1",
     "expo-speech": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "patch-package": "^6.5.0",
+    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animated-sprite": "^0.11.1",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "13.4.0",
-    "rn-sprite-sheet": "^1.1.12"
+    "rn-sprite-sheet": "^1.1.12",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
