--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
   },
   "dependencies": {
     "@asp2131/rn-anime-sprite": "^1.0.2",
-    "@benjeau/react-native-draw-extras": "^0.2.2",
-    "@react-native-community/slider": "4.2.4",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
-    "@shopify/react-native-skia": "0.1.157",
     "expo": "~47.0.9",
     "expo-screen-orientation": "~5.0.1",
-    "expo-speech": "~11.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "lottie-react-native": "^5.1.4",
@@ -36,9 +32,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "13.4.0",
-    "react-native-vision-camera": "^2.15.2",
-    "vision-camera-image-labeler": "^0.1.6"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
